# PlaylistHistory

./: .env.example  .gitignore  Cargo.toml  DeezerPlaylist.json  README.md  docker-compose.yml
.github/workflows/: audit.yml  main.yml
crates/playlist-sync-app/: Cargo.toml
crates/playlist-sync-domain/: Cargo.toml
crates/playlist-sync-domain/src/: lib.rs  value_objects.rs
crates/playlist-sync-infra/: Cargo.toml
crates/playlist-sync-server/: Cargo.toml
crates/playlist-sync-tests/: Cargo.toml
src/: deezer.rs  main.rs
