[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"
