# crates/playlist-sync-server/Cargo.toml
[package]
name = "playlist-sync-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
playlist-sync-domain = { path = "../playlist-sync-domain" }
playlist-sync-app = { path = "../playlist-sync-app" }
playlist-sync-infra = { path = "../playlist-sync-infra" }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
sqlx.workspace = true
tracing.workspace = true
axum.workspace = true
reqwest.workspace = true
serde_json.workspace = true
